--- a/CustomNet/index.html
+++ b/CustomNet/index.html
@@ -228,7 +228,7 @@
     <div class="col-md-6 col-md-offset-3">
         <div class="content  text-align">
             <p>
-                <font size="+2">
+                <font size="+1">
                     We proposed <b>CustomNet</b>, a zero-shot customization method that can generate harmonious 
                     customized images with explicit <b>Viewpoints, 
                     Location, and Background(text/image) </b> controls simultaneously, while ensuring <b>identity preservation</b>.
@@ -294,14 +294,14 @@
         <ul class="nav nav-pills nav-justified">
 
             <li>
-                <a target="_blank" href="https://github.com/AILab-CVC/SEED">
+                <a target="_blank" href="https://github.com">
                     <image src="assets/imgs/github.png" height="60px">
                         <h4><strong>Github</strong></h4>
                 </a>
             </li>
 
             <li>
-                <a target="_blank" href="https://10a4e7976e6fc2032c.gradio.live/">
+                <a target="_blank" href="https://arxiv.org/">
                     <image src="assets/imgs/arxiv.png" height="60px">
                         <h4><strong>Paper</strong></h4>
                 </a>
