--- a/CustomNet/index.html
+++ b/CustomNet/index.html
@@ -205,11 +205,12 @@
           <a href="https://scholar.google.com/citations?user=zJvrrusAAAAJ">Zhongang Qi</a><sup>2</sup>,
         </span>
         <span class="author-block">
+            <a href="https://scholar.google.com/citations?hl=en&amp;user=fYdxi2sAAAAJ">Chun Yuan</a><sup>1&#9993</sup>
+          </span>
+        <span class="author-block">
           <a href="https://scholar.google.com/citations?user=4oXBp9UAAAAJ">Ying Shan</a><sup>2</sup>,
         </span>
-        <span class="author-block">
-          <a href="https://scholar.google.com/citations?hl=en&amp;user=fYdxi2sAAAAJ">Chun Yuan</a><sup>1&#9993</sup>
-        </span>
+
 
         <br>
             <a target="_blank" href="https://www.tsinghua.edu.cn/">
@@ -447,12 +448,12 @@
     </div>
 
     <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-            <pre><code>@misc{cao2023masactrl,
-                title={MasaCtrl: Tuning-Free Mutual Self-Attention Control for Consistent Image Synthesis and Editing}, 
-                author={Mingdeng Cao and Xintao Wang and Zhongang Qi and Ying Shan and Xiaohu Qie and Yinqiang Zheng},
+        <div class="col-md-8 col-md-offset-2">
+            <pre><code>@misc{yuan2023CustomNet,
+                title={CustomNet: Zero-Shot Object Customization with Variable-Viewpoints in Text-to-Image Diffusion Models}, 
+                author={Ziyang Yuan and Mingdeng Cao and Xintao Wang and Zhongang Qi and Chun Yuan and Ying Shan},
                 year={2023},
-                eprint={2304.08465},
+                eprint={2310.xxx},
                 archivePrefix={arXiv},
                 primaryClass={cs.CV}
             }</code></pre>
