--- a/CustomNet/index.html
+++ b/CustomNet/index.html
@@ -211,7 +211,12 @@
           <a href="https://scholar.google.com/citations?user=4oXBp9UAAAAJ">Ying Shan</a><sup>2</sup>,
         </span>
 
-
+        <div class="content text-center">
+            <span class="author-block"><sup>1</sup>Tsinghua University,</span>
+            <span class="author-block"><sup>2</sup>ARC Lab, Tencent PCG,</span>
+            <span class="author-block"><sup>2</sup>The University of Tokyo</span>
+        </div>
+        
         <br>
             <a target="_blank" href="https://www.tsinghua.edu.cn/">
             <image src="assets/imgs/THU.jpg" height="37px"> </a>
@@ -301,7 +306,7 @@
             </li>
 
             <li>
-                <a target="_blank" href="https://arxiv.org/">
+                <a target="_blank" href="https://arxiv.org/abs/2310.19784">
                     <image src="assets/imgs/arxiv.png" height="60px">
                         <h4><strong>Paper</strong></h4>
                 </a>
@@ -449,14 +454,14 @@
 
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <pre><code>@misc{yuan2023CustomNet,
-                title={CustomNet: Zero-Shot Object Customization with Variable-Viewpoints in Text-to-Image Diffusion Models}, 
+            <pre><code>@misc{yuan2023customnet,
+                title={CustomNet: Zero-shot Object Customization with Variable-Viewpoints in Text-to-Image Diffusion Models}, 
                 author={Ziyang Yuan and Mingdeng Cao and Xintao Wang and Zhongang Qi and Chun Yuan and Ying Shan},
                 year={2023},
-                eprint={2310.xxx},
+                eprint={2310.19784},
                 archivePrefix={arXiv},
                 primaryClass={cs.CV}
-            }</code></pre>
+          }</code></pre>
         </div>
     </div>
 </div>
