--- a/CustomNet/index.html
+++ b/CustomNet/index.html
@@ -299,7 +299,7 @@
         <ul class="nav nav-pills nav-justified">
 
             <li>
-                <a target="_blank" href="https://github.com">
+                <a target="_blank" href="https://github.com/TencentARC/CustomNet">
                     <image src="assets/imgs/github.png" height="60px">
                         <h4><strong>Github</strong></h4>
                 </a>
